--- a/index.html
+++ b/index.html
@@ -1,40 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-    <script src="script.js"></script>
-    <title>Joker API!</title>
-</head>
-<body>
-    <div class="container">
-        <div class="row">
-            <div class="container p-2 my-2">
-                <h1>Welcome to the Joker API!</h1>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col">
-                <div class="form-group">
-                    <label for="id">Joke ID:</label>
-                    <input type="number" min="0" class="form-control" id="joke_id">
+    <head>
+        <!-- Required meta tags -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- Bootstrap CSS -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+        <script src="script.js"></script>
+        <title>Joker API!</title>
+    </head>
+    <body>
+        <div class="container">
+            <div class="row">
+                <div class="container p-2 my-2">
+                    <h1>Welcome to the Joker API!</h1>
                 </div>
             </div>
+            <div class="row">
+                <div class="col">
+                    <div class="form-group">
+                        <label for="id">Joke ID:</label>
+                        <input type="number" min="0" class="form-control" id="joke_id">
+                    </div>
+                </div>
 
-            <div class="col">
-                <button type="button" id="btngetid" name='getid' 
-                class="btn btn-dark mt-4" value="getid" onclick="requestData2('joke')">Joke by ID</button>
-                <button type="button" id="randomj" name='randomj' 
-                class="btn btn-dark mt-4 ml-2" value="randomj" onclick="requestData('jokes')">Random Joke</button>
+                <div class="col">
+                    <button type="button" id="btngetid" name='getid' 
+                    class="btn btn-dark mt-4" value="getid" onclick="requestData2('joke')">Joke by ID</button>
+                    <button type="button" id="randomj" name='randomj' 
+                    class="btn btn-dark mt-4 ml-2" value="randomj" onclick="requestData('jokes')">Random Joke</button>
+                </div>
             </div>
-        </div>
-        <div class="card bg-light text-dark mt-3">
-            <div class="card-body" id="response"></div>     
-        </div>
-</body>
-</html
+            <div class="card bg-light text-dark mt-3">
+                <div class="card-body" id="response"></div>     
+            </div>
+    </body>
+</html>
