--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
     <head>
         <!-- Required meta tags -->
         <meta charset="utf-8">
@@ -9,32 +8,132 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
         <script src="script.js"></script>
-        <title>Joker API!</title>
+        <title>Password API!</title>
     </head>
     <body>
         <div class="container">
             <div class="row">
                 <div class="container p-2 my-2">
-                    <h1>Welcome to the Joker API!</h1>
+                    <h1>Welcome to the Password Generator API!</h1>
                 </div>
             </div>
-            <div class="row">
-                <div class="col">
-                    <div class="form-group">
-                        <label for="id">Joke ID:</label>
-                        <input type="number" min="0" class="form-control" id="joke_id">
-                    </div>
-                </div>
-
-                <div class="col">
-                    <button type="button" id="btngetid" name='getid' 
-                    class="btn btn-dark mt-4" value="getid" onclick="requestData2('joke')">Joke by ID</button>
-                    <button type="button" id="randomj" name='randomj' 
-                    class="btn btn-dark mt-4 ml-2" value="randomj" onclick="requestData('jokes')">Random Joke</button>
-                </div>
-            </div>
-            <div class="card bg-light text-dark mt-3">
+            <form class="row g-3">
+              <div class="col-md-4">
+                <label for="validationCustom01" class="form-label">Character Pool</label>
+                <select class="form-select" id="validationCustom01" required>
+                  <option selected disabled value="">Choose...</option>
+                  <option>Digits only</option>
+                  <option>Lowercase letters only</option>
+                  <option>Uppercase letters only </option>
+                  <option>Lowercase and uppercase letters</option>
+                  <option>Digits and letters</option>
+                  <option>Special printable characters only</option>
+                  <option>All printable characters</option>
+                  <option>Passphrase</option>
+                </select>
+              </div>
+              <div class="col-md-2">
+                <label for="validationCustom02" class="form-label">Password Length</label>
+                <select class="form-select" id="validationCustom02" required>
+                  <option selected disabled value="">Choose...</option>
+                  <option>1</option>
+                  <option>2</option>
+                  <option>3</option>
+                  <option>4</option>
+                  <option>5</option>
+                  <option>6</option>
+                  <option>7</option>
+                  <option>8</option>
+                  <option>9</option>
+                  <option>10</option>
+                  <option>11</option>
+                  <option>12</option>
+                  <option>13</option>
+                  <option>14</option>
+                  <option>15</option>
+                  <option>16</option>
+                  <option>17</option>
+                  <option>18</option>
+                  <option>19</option>
+                  <option>20</option>
+                  <option>21</option>
+                  <option>22</option>
+                  <option>23</option>
+                  <option>24</option>
+                  <option>25</option>
+                  <option>26</option>
+                  <option>27</option>
+                  <option>28</option>
+                  <option>29</option>
+                  <option>30</option>
+                </select>
+              </div>
+              <div class="col-md-2">
+                <label for="validationCustom03" class="form-label">Number of passwords</label>
+                <select class="form-select" id="validationCustom03">
+                  <option selected disabled value="">Choose...</option>
+                  <option>1</option>
+                  <option>2</option>
+                  <option>3</option>
+                  <option>4</option>
+                  <option>5</option>
+                  <option>6</option>
+                  <option>7</option>
+                  <option>8</option>
+                  <option>9</option>
+                  <option>10</option>
+                  <option>11</option>
+                  <option>12</option>
+                  <option>13</option>
+                  <option>14</option>
+                  <option>15</option>
+                  <option>16</option>
+                  <option>17</option>
+                  <option>18</option>
+                  <option>19</option>
+                  <option>20</option>
+                </select>
+              </div>
+              <div class="col-md-2">
+                <label for="validationCustom04" class="form-label">Passphrase Separator</label>
+                <select class="form-select" id="validationCustom04" disabled>
+                  <option selected disabled value="">Choose...</option>
+                  <option>*</option>
+                  <option>_</option>
+                  <option>@</option>
+                  <option>#</option>
+                  <option>+</option>
+                  <option>-</option>
+                  <option>+</option>
+                  <option><</option>
+                  <option>></option>
+                  <option>=</option>
+                </select>
+              </div>
+              <div class="col-md-10">
+                <label for="validationDefault05" class="form-label">Characters to omit</label>
+                <input type="text" class="form-control" id="validationDefault05">
+              </div>
+              <div class="col-12">
+                <button class="btn btn-primary" type="submit">Generate password(s)!</button>
+              </div>
+            </form>
+            <div class="col-md-10">
+              <div class="card bg-light text-dark mt-3">
                 <div class="card-body" id="response"></div>     
+              </div>
             </div>
+      </div>
     </body>
+    <script type="text/javascript">
+      document.getElementById("validationCustom01").onchange = function function1 () {
+        document.getElementById("validationCustom04").setAttribute("disabled", "disabled")
+        if (this.value == 'Passphrase') {
+          document.getElementById("validationCustom04").removeAttribute("disabled")
+          document.getElementById("validationDefault05").setAttribute("disabled", "disabled")
+        }
+        else
+        document.getElementById("validationDefault05").removeAttribute("disabled");
+    };
+    </script>
 </html>
