--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <!-- Required meta tags -->
+      <!-- Deployed: https://contjo01.github.io/PasswordGenerator/ -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- Bootstrap CSS -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-        <script src="script.js" type="text/javascript"></script>
         <title>Password API!</title>
     </head>
     <body>
@@ -22,14 +20,14 @@
                 <label for="validationCustom01" class="form-label">Character Pool</label>
                 <select class="form-select" id="validationCustom01" required>
                   <option selected disabled value="">Choose...</option>
-                  <option>Digits only</option>
-                  <option>Lowercase letters only</option>
-                  <option>Uppercase letters only </option>
-                  <option>Lowercase and uppercase letters</option>
-                  <option>Digits and letters</option>
-                  <option>Special printable characters only</option>
-                  <option>All printable characters</option>
-                  <option>Passphrase</option>
+                  <option>digits</option>
+                  <option>lower</option>
+                  <option>upper</option>
+                  <option>letters</option>
+                  <option>alphanum</option>
+                  <option>special</option>
+                  <option>all</option>
+                  <option>passphrase</option>
                 </select>
               </div>
               <div class="col-md-2">
@@ -97,6 +95,7 @@
               <div class="col-md-2">
                 <label for="validationCustom04" class="form-label">Passphrase Separator</label>
                 <select class="form-select" id="validationCustom04" disabled>
+                </div>
                   <option selected disabled value="">Choose...</option>
                   <option>*</option>
                   <option>_</option>
@@ -110,12 +109,8 @@
                   <option>=</option>
                 </select>
               </div>
-              <div class="col-md-10">
-                <label for="validationDefault05" class="form-label">Characters to omit</label>
-                <input type="text" class="form-control" id="validationDefault05">
-              </div>
               <div class="col-12">
-                <button class="btn btn-primary" type="submit">Generate password(s)!</button>
+                <button class="btn btn-primary" type="submit" onclick="requestData()">Generate password(s)!</button>
               </div>
             </form>
             <div class="col-md-10">
@@ -125,15 +120,5 @@
             </div>
       </div>
     </body>
-    <script type="text/javascript">
-      document.getElementById("validationCustom01").onchange = function function1 () {
-        document.getElementById("validationCustom04").setAttribute("disabled", "disabled")
-        if (this.value == 'Passphrase') {
-          document.getElementById("validationCustom04").removeAttribute("disabled")
-          document.getElementById("validationDefault05").setAttribute("disabled", "disabled")
-        }
-        else
-        document.getElementById("validationDefault05").removeAttribute("disabled");
-    };
-    </script>
+    <script src="script.js" type="text/javascript"></script>
 </html>
